--- a/templates/beez/css/template.css
+++ b/templates/beez/css/template.css
@@ -1784,3 +1784,56 @@ div.flypage_message div.flypage_text{
     text-align: center;
     text-decoration: none;
 }
+
+
+/* CSS FOR LAXIMO FORMS */
+
+.indexpage-search-form {
+display: inline-block;
+}
+
+.autopartsForms h3 {
+color:#ff081d;
+padding: 0;
+margin: 0;
+}
+
+.autopartsForms h2 {
+padding: 0;
+font-size:14px;
+}
+.autopartsForms span.italic { margin: 3px 0 9px 0; font-weight:normal; font-style:italic; }
+.autopartsForms p { margin: 10px 0 13px 0; }
+
+.autopartsForms input[type=text] { 
+display: inline-block;
+height: 20px;
+padding: 4px 6px;
+font-size: 14px;
+line-height: 20px;
+color: #555555;
+vertical-align: middle;
+border-radius: 4px;
+border: 1px solid #cccccc;
+}
+.autopartsForms input[type=submit] {
+	background: url('../images/icon-search.png') center center no-repeat;
+border: none;
+color: transparent;
+margin-left: 8px;
+height: 20px;
+width: 20px;
+}
+div#columnOne, div#columnThree { float:left; width:28%; }
+div#columnThree { margin-top:21px; }
+div#columnTwo { float:left; height:100px; }
+div#columnTwo { margin-left:5%; margin-right:5%; }
+div#catlogueSearch { clear:both; display:block; }
+.catalogs-links { float:left; margin-right:30px; list-style:none; margin:0; padding:0; width:162px; }
+.catalogs-links a { color:#000; margin-left:10px; line-height: 26px; }
+.catalogs-links li { height:37px; }
+.catalogs-links li img { float:left;}
+
+#findByFrame #frame, #findByFrame #frameNo { width:80px; }
+.autopartsForms #vin { width: 250px; }
+h1 { font-size:20px; font-weight:normal; }
