--- a/templates/beez/css/template.css
+++ b/templates/beez/css/template.css
@@ -1837,3 +1837,11 @@ div#catlogueSearch { clear:both; display:block; }
 #findByFrame #frame, #findByFrame #frameNo { width:80px; }
 .autopartsForms #vin { width: 250px; }
 h1 { font-size:20px; font-weight:normal; }
+
+.likes{
+    position: fixed; 
+    right: 0px; 
+    top: 200px; 
+    width: 45px; 
+    height: 164px;
+}
